edit server info

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: ns1.dns-parking.com
+          server: ftp.taylorpauldavis.com
           username: u961510057
-          password: b#P9#H5ab2#L
-          server-dir: /public_html/taylorpauldavis.com/
+          password: tpdLSU2017
+          server-dir: /home/u961510057/domains/taylorpauldavis.com/public_html
