--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwind-scrollbar-hide": "^1.1.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwind-scrollbar": "^1.3.1",
